--- a/app.json
+++ b/app.json
@@ -5716,5 +5716,16 @@
         "nl": "seconden"
       }
     }
+  },
+  "discovery": {
+    "duco-connectivity-board": {
+      "type": "mdns-sd",
+      "mdns-sd": {
+        "name": "https",
+        "protocol": "tcp"
+      },
+      "id": "{{txt.serialducobox}}",
+      "conditions": []
+    }
   }
 }
