--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "nl.aartse.duco",
   "version": "1.9.0",
-  "compatibility": ">=12.1.0",
+  "compatibility": ">=12.3.0",
   "sdk": 3,
   "platforms": [
     "local"
@@ -5378,16 +5378,23 @@
         "en": "DUCO Remote Switch",
         "nl": "DUCO Bedieningsschakelaar"
       },
+      "devices": {
+        "type": "app",
+        "singular": true,
+        "filter": {
+          "capabilities": "ventilation_state"
+        }
+      },
       "height": "100%",
       "settings": [],
       "api": {
-        "updateBoxState": {
+        "updateVentilationState": {
           "method": "PUT",
-          "path": "/box-state"
+          "path": "/ventilation-state/:id"
         },
-        "getBoxState": {
+        "getVentilationState": {
           "method": "GET",
-          "path": "/box-state"
+          "path": "/ventilation-state/:id"
         }
       },
       "id": "remote-switch"
